# internal/transport/banners/banners_handler.go
@@ -47,6 +47,8 @@ func (handler *bannersHandler) Register(router *mux.Router) {
 		Methods(http.MethodGet)
 	router.HandleFunc(bannerID, handler.middleware.Auth(handler.middleware.AdminAuth(handler.deleteBanner))).
 		Methods(http.MethodDelete)
+	router.HandleFunc(bannerID, handler.middleware.Auth(handler.middleware.AdminAuth(handler.updateBanner))).
+		Methods(http.MethodPatch)
 }
 
 // Создание нового баннера
@@ -97,7 +99,7 @@ func (handler *bannersHandler) createBanner(w http.ResponseWriter, r *http.Reque
 	}
 	handler.logger.Debug("valid successful")
 
-	id, err := handler.service.InsertBanner(r.Context(), banner)
+	id, err := handler.service.InsertBanner(r.Context(), &banner)
 	if err != nil {
 		handler.logger.Warn(err.Error())
 		transport.ResponseWriteError(w, http.StatusInternalServerError, err.Error(), handler.logger)
@@ -146,7 +148,7 @@ func (handler *bannersHandler) getUserBanner(w http.ResponseWriter, r *http.Requ
 	handler.logger.Debug("params", slog.Int("tag_id", params.TagID), slog.Int("feature_id", params.FeatureID),
 		slog.Bool("use_last_revision value", params.UseLastrRevision), slog.String("token", params.Token))
 
-	content, err := handler.service.GetUserBanner(r.Context(), params)
+	content, err := handler.service.GetUserBanner(r.Context(), &params)
 	if err == pgx.ErrNoRows {
 		handler.logger.Debug(err.Error())
 		w.WriteHeader(http.StatusNotFound)
@@ -209,7 +211,7 @@ func (handler *bannersHandler) getBanners(w http.ResponseWriter, r *http.Request
 
 	handler.logger.Debug("params", slog.Any("params", params))
 
-	banners, err := handler.service.GetBanners(r.Context(), params)
+	banners, err := handler.service.GetBanners(r.Context(), &params)
 	if err != nil {
 		handler.logger.Warn(err.Error())
 		transport.ResponseWriteError(w, http.StatusInternalServerError, err.Error(), handler.logger)
@@ -272,4 +274,74 @@ func (handler *bannersHandler) deleteBanner(w http.ResponseWriter, r *http.Reque
 	}
 
 	w.WriteHeader(http.StatusNoContent)
+}
+
+// Обновление содержимого баннера
+// @Summary UpdateBanner
+// @Security ApiKeyAuth
+// @Description Обновление содержимого баннера
+// @ID update-banner
+// @Tags banner
+// @Produce json
+// @Param id path integer false "id"
+// @Param input body banner_model.BannerUpdate true "banner info"
+// @Success 200 {object} nil OK
+// @Failure 400 {object} transport.RespWriterError Некорректные данные
+// @Failure 401 {object} nil Пользователь не авторизован
+// @Failure 403 {object} nil Пользователь не имеет доступа
+// @Failure 404 {object} nil Баннер не найден
+// @Failure 500 {object} transport.RespWriterError Внутренняя ошибка сервера
+// @Router /banner/{id} [patch]
+func (handler *bannersHandler) updateBanner(w http.ResponseWriter, r *http.Request) {
+
+	id, err := strconv.Atoi(mux.Vars(r)["id"])
+	if err != nil {
+		handler.logger.Debug(err.Error())
+		transport.ResponseWriteError(w, http.StatusBadRequest, err.Error(), handler.logger)
+		return
+	}
+
+	body, err := io.ReadAll(r.Body)
+	if err != nil {
+		handler.logger.Debug(err.Error())
+		transport.ResponseWriteError(w, http.StatusBadRequest, err.Error(), handler.logger)
+		return
+	}
+	defer r.Body.Close()
+
+	handler.logger.Debug("update banner handler", slog.Int("id", id), slog.String("body", string(body)))
+	handler.logger.Debug("unmarshaling request body")
+	var banner banner_model.BannerUpdate
+
+	if err := json.Unmarshal(body, &banner); err != nil {
+		handler.logger.Debug(err.Error())
+		transport.ResponseWriteError(w, http.StatusBadRequest, err.Error(), handler.logger)
+		return
+	}
+	banner.ID = id
+
+	handler.logger.Debug("validate request body", slog.Any("banner", banner))
+	validate := validator.New(validator.WithRequiredStructEnabled())
+	validate.RegisterValidation("json", banner_model.ValidateJson)
+	if err = validate.Struct(banner); err != nil {
+		handler.logger.Debug(err.Error())
+		transport.ResponseWriteError(w, http.StatusBadRequest, err.Error(), handler.logger)
+		return
+	}
+	handler.logger.Debug("valid successful")
+
+	err = handler.service.UpdateBanner(r.Context(), &banner)
+	if err == pgx.ErrNoRows {
+		handler.logger.Debug(err.Error())
+		w.WriteHeader(http.StatusNotFound)
+		return
+	}
+	if err != nil {
+		handler.logger.Debug(err.Error())
+		transport.ResponseWriteError(w, http.StatusInternalServerError, err.Error(), handler.logger)
+		return
+	}
+
+	w.WriteHeader(http.StatusOK)
+	handler.logger.Debug("update OK")
 }
